exports[`<UserPanel /> renders children correctly 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat fMzrxf"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with collapse option 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src={undefined} />
  <div
    className="sc-bxivhb eIFiiD">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat fMzrxf"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with default options 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat fMzrxf"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with image 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src="/some/path" />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat fMzrxf"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with link 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat fMzrxf"
      href="/a/link">
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with name 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy">
      My Name
    </p>
    <a
      className="sc-htpNat fMzrxf"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with online status option 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat fMzrxf"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa gbfvFu" />
       Online
    </a>
  </div>
</div>
`;

exports[`<UserPanel /> renders correctly with theme 1`] = `
<div
  className="sc-EHOje xDBnt">
  <img
    className="sc-ifAKCX bYelyc"
    src={undefined} />
  <div
    className="sc-bxivhb ivIdti">
    <p
      className="sc-bwzfXH ePSCHy" />
    <a
      className="sc-htpNat fMzrxf"
      href={null}>
      <i
        className="fa fa-circle sc-bdVaJa dEANaN" />
       Offline
    </a>
  </div>
</div>
`;
